--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
                 <div id="loginResult" class="result"></div>
             </div>
 
+            <!-- Re-register Section -->
+            <div id="reregisterSection" class="section">
+                <h2>Re-register Fingerprint</h2>
+                <p class="note">Use this if you want to update your fingerprint for an existing account.</p>
+                <div class="form-group">
+                    <label for="reregisterName">Select User:</label>
+                    <select id="reregisterName" class="form-select">
+                        <option value="">-- Select a user --</option>
+                    </select>
+                </div>
+                <button id="reregisterBtn" class="btn btn-primary">
+                    <span class="icon">🔄</span> Re-register Fingerprint
+                </button>
+            </div>
+
             <!-- Registered Users Section -->
             <div id="usersSection" class="section">
                 <h2>Registered Users</h2>
